Simplify loss example